--- a/MyMVC/WebContent/WEB-INF/Command.properties
+++ b/MyMVC/WebContent/WEB-INF/Command.properties
@@ -1,11 +1,11 @@
 # index Mapping Information
 
-# http://localhost:9090/MyMVC/index.up
-# respond Class ==> common.controller.IndexController
+
 /index.up=common.controller.IndexController
 /main.up=common.controller.MainController
 
 /test/test01.up=test.controller.Test01Action
 /test/test02.up=test.controller.Test02Action
 /test/form01.up=test.controller.Form01Action
-/test/form01_result.up=test.controller.Form01ResultAction
+/test/form01_insert.up=test.controller.Form01InsertAction
+/test/form01_select.up=test.controller.Form01SelectAction
