--- a/WEB-INF/Command.properties
+++ b/WEB-INF/Command.properties
@@ -1,6 +1,6 @@
 # index Mapping Information
 
-/index.up=common.controller.IndexController
+/index.up=common.controller.IndexController    
 /main.up=common.controller.MainController
 
 /test/test01.up=test.controller.Test01Action
@@ -10,12 +10,21 @@
 /test/form01_select.up=test.controller.Form01SelectAction
 
 
-# Hompage Mapping Information
-
+# Home Page Mapping Information
 /=common.controller.HomeAction
 /home.up=common.controller.HomeAction
 
+# error Page Mapping Information
+/error.up=common.controller.ErrorAction
 
 
-# Member Mapping Information
+# member Mapping Information
 /member/memberRegister.up=member.controller.MemberRegisterAction
+/member/idDuplicateCheck.up=member.controller.IdDuplicateCheckAction
+/member/emailDuplicateCheck.up=member.controller.EmailDuplicateCheckAction
+
+
+# login Mapping Information
+/login/login.up=member.controller.LoginAction
+/login/logout.up=member.controller.LogoutAction
+
