--- a/WEB-INF/Command.properties
+++ b/WEB-INF/Command.properties
@@ -27,4 +27,7 @@
 # login Mapping Information
 /login/login.up=member.controller.LoginAction
 /login/logout.up=member.controller.LogoutAction
-
+/login/idFind.up=member.controller.IdFindAction
+/login/pwdFind.up=member.controller.PwdFindAction
+/login/verifyCertification.up=member.controller.VerifyCertificationAction
+/login/pwdUpdateEnd.up=member.controller.PwdUpdateEndAction
